# docs/APIs/swagger.json
@@ -592,6 +592,80 @@
             }
           ]
         }
+      },
+      "/booking/book":{
+        "post": {
+          "tags": ["Booking"],
+          "summary": "Book an item",
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "accountId": {
+                      "type": "string"
+                    },
+                    "serviceItemId": {
+                      "type": "string"
+                    },
+                    "bookingTime":{
+                      "type":"string"
+                    },
+                    "checkinDay":{
+                      "type":"string"
+                    },
+                    "checkoutDay":{
+                      "type":"string"
+                    }
+                  }
+                }
+              }
+            },
+            "required": true
+          },
+          "responses": {
+            "201": {
+              "description": "Reserve successfully",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "string"
+                      },
+                      "accountId": {
+                        "type": "string"
+                      },
+                      "serviceItemId": {
+                        "type": "string"
+                      },
+                      "bookingTime": {
+                        "type": "string"
+                      },
+                      "checkinDay": {
+                        "type": "string"
+                      },
+                      "checkoutDay":{
+                        "type":"string"
+                      },
+                      "createdAt": {
+                        "type": "string"
+                      },
+                      "updatedAt": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "400": {
+              "description": "User info is missing"
+            }
+          }
+        }
       }
   },
   "components": {
